Fix components so they are importable anywhere

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Vue Example</title>
+    <meta charset="utf-8">
+    <title>Vue Example</title>
 </head>
 
 <body>
-  <div id="app">
-    <app></app>
-  </div>
-  <script src="dist/build.js"></script>
+    <div id="app">
+        <incrementer></incrementer>
+        <ol>
+            <todo-item></todo-item>
+        </ol>
+    </div>
+    <script src="dist/build.js"></script>
 </body>
 
 </html>
